fix(mails): :bug: Skin : le thème clair fait que les boutons à droite de la PJ ne sont pas visibles et color taille doc en mode sombre
FIX: MANTIS 0008702

--- a/skins/mel_elastic/themes/super-classic/style/less/colors.less
+++ b/skins/mel_elastic/themes/super-classic/style/less/colors.less
@@ -29,8 +29,8 @@
   --main-panel-border-radius: 15px;
 
   //Box shadow
-  --main-box-shadow: 0 1.6px 3.6px 0 rgba(0, 0, 0, 0.132),
-    0 0.3px 0.9px 0 rgba(0, 0, 0, 0.108);
+  --main-box-shadow:
+    0 1.6px 3.6px 0 rgba(0, 0, 0, 0.132), 0 0.3px 0.9px 0 rgba(0, 0, 0, 0.108);
 
   //Main margin
   --main-margin: 10px 0px;
@@ -99,6 +99,8 @@
   --bureau-app-text-color: var(--main-text-color);
 
   //Buttons
+  --button-pj-text-color: var(--main-text-color);
+
   --mel-button-background-color: var(--main-bckg-color);
   --mel-button-hover-background-color: var(--tierciary-bckg-color);
   --mel-button-border-color: var(--main-border-color);
